--- a/index.html
+++ b/index.html
@@ -1,170 +1,246 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
 <meta charset="UTF-8">
-<title>Bomberman Funcional</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Bomber Zueira Arena</title>
+
 <style>
-body { margin:0; background:#222; display:flex; justify-content:center; align-items:center; height:100vh; }
-canvas { background:#000; }
-#info { position:absolute; top:10px; color:white; font-family:Arial; }
+body{
+    margin:0;
+    background:#0f0f0f;
+    overflow:hidden;
+    font-family:Arial,Helvetica,sans-serif;
+    text-align:center;
+    color:white;
+}
+canvas{
+    background:#1a1a1a;
+    display:block;
+    margin:0 auto;
+    border:4px solid #00ffcc;
+}
+#ui{
+    position:absolute;
+    top:10px;
+    width:100%;
+    font-size:18px;
+}
 </style>
 </head>
 <body>
-<div id="info">Setas = mover | Espaço = bomba</div>
-<canvas id="game" width="480" height="480"></canvas>
+
+<div id="ui">
+    Player 1 (WASD + F) 🔵 | Player 2 (Setas + Enter) 🔴
+</div>
+
+<canvas id="game" width="640" height="640"></canvas>
 
 <script>
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 
-const tileSize = 40;
-const rows = 12;
-const cols = 12;
+const tile = 40;
+const rows = 16;
+const cols = 16;
 
-let map = [];
-for(let y=0;y<rows;y++){
-  map[y] = [];
-  for(let x=0;x<cols;x++){
-    if(y===0||x===0||y===rows-1||x===cols-1|| (y%2===0 && x%2===0)){
-      map[y][x] = 1; // parede fixa
-    } else if(Math.random() < 0.3 && !(x<3 && y<3)){
-      map[y][x] = 2; // bloco destrutível
-    } else {
-      map[y][x] = 0;
+let keys = {};
+document.addEventListener("keydown",e=>keys[e.key]=true);
+document.addEventListener("keyup",e=>keys[e.key]=false);
+
+class Player{
+    constructor(x,y,color,controls){
+        this.x=x;
+        this.y=y;
+        this.size=30;
+        this.speed=3;
+        this.color=color;
+        this.controls=controls;
+        this.alive=true;
     }
-  }
+    move(){
+        if(!this.alive)return;
+
+        let nx=this.x;
+        let ny=this.y;
+
+        if(keys[this.controls.up])ny-=this.speed;
+        if(keys[this.controls.down])ny+=this.speed;
+        if(keys[this.controls.left])nx-=this.speed;
+        if(keys[this.controls.right])nx+=this.speed;
+
+        if(!collide(nx,this.y))this.x=nx;
+        if(!collide(this.x,ny))this.y=ny;
+
+        if(keys[this.controls.bomb]){
+            placeBomb(this);
+            keys[this.controls.bomb]=false;
+        }
+    }
+    draw(){
+        if(!this.alive)return;
+        ctx.fillStyle=this.color;
+        ctx.beginPath();
+        ctx.arc(this.x+15,this.y+15,15,0,Math.PI*2);
+        ctx.fill();
+    }
 }
 
-let player = {x:1,y:1,alive:true};
-let bombs = [];
-let explosions = [];
-let enemies = [{x:10,y:10,alive:true}];
-
-document.addEventListener("keydown", e=>{
-  if(!player.alive) return;
-  if(e.key==="ArrowUp") move(0,-1);
-  if(e.key==="ArrowDown") move(0,1);
-  if(e.key==="ArrowLeft") move(-1,0);
-  if(e.key==="ArrowRight") move(1,0);
-  if(e.key===" ") placeBomb();
-});
-
-function move(dx,dy){
-  let nx = player.x+dx;
-  let ny = player.y+dy;
-  if(map[ny][nx]===0){
-    player.x=nx;
-    player.y=ny;
-  }
+class Bomb{
+    constructor(x,y){
+        this.x=x;
+        this.y=y;
+        this.timer=120;
+    }
+    update(){
+        this.timer--;
+        if(this.timer<=0)explode(this);
+    }
+    draw(){
+        ctx.fillStyle="black";
+        ctx.beginPath();
+        ctx.arc(this.x+20,this.y+20,15,0,Math.PI*2);
+        ctx.fill();
+    }
 }
 
-function placeBomb(){
-  if(!bombs.some(b=>b.x===player.x && b.y===player.y)){
-    bombs.push({x:player.x,y:player.y,timer:60});
-  }
+class Explosion{
+    constructor(x,y){
+        this.x=x;
+        this.y=y;
+        this.timer=30;
+    }
+    update(){this.timer--;}
+    draw(){
+        ctx.fillStyle="orange";
+        ctx.fillRect(this.x,this.y,tile,tile);
+    }
 }
 
-function update(){
-  bombs.forEach(b=>b.timer--);
-  bombs.filter(b=>b.timer<=0).forEach(explode);
-  bombs = bombs.filter(b=>b.timer>0);
+let map=[];
+let bombs=[];
+let explosions=[];
 
-  explosions.forEach(e=>e.timer--);
-  explosions = explosions.filter(e=>e.timer>0);
-
-  enemies.forEach(en=>{
-    if(!en.alive) return;
-    if(Math.random()<0.02){
-      let dirs=[[1,0],[-1,0],[0,1],[0,-1]];
-      let d = dirs[Math.floor(Math.random()*4)];
-      let nx=en.x+d[0], ny=en.y+d[1];
-      if(map[ny][nx]===0){
-        en.x=nx; en.y=ny;
-      }
+function generateMap(){
+    for(let r=0;r<rows;r++){
+        map[r]=[];
+        for(let c=0;c<cols;c++){
+            if(r%2===1 && c%2===1){
+                map[r][c]=1;
+            }else if(Math.random()<0.25){
+                map[r][c]=2;
+            }else{
+                map[r][c]=0;
+            }
+        }
     }
-  });
+    map[0][0]=0; map[0][1]=0; map[1][0]=0;
+    map[15][15]=0; map[14][15]=0; map[15][14]=0;
+}
 
-  explosions.forEach(e=>{
-    if(player.x===e.x && player.y===e.y){
-      player.alive=false;
+function drawMap(){
+    for(let r=0;r<rows;r++){
+        for(let c=0;c<cols;c++){
+            if(map[r][c]===1){
+                ctx.fillStyle="#555";
+                ctx.fillRect(c*tile,r*tile,tile,tile);
+            }
+            if(map[r][c]===2){
+                ctx.fillStyle="#964B00";
+                ctx.fillRect(c*tile,r*tile,tile,tile);
+            }
+        }
     }
-    enemies.forEach(en=>{
-      if(en.x===e.x && en.y===e.y){
-        en.alive=false;
-      }
-    });
-  });
+}
+
+function collide(x,y){
+    let left=Math.floor(x/tile);
+    let right=Math.floor((x+30)/tile);
+    let top=Math.floor(y/tile);
+    let bottom=Math.floor((y+30)/tile);
+
+    if(map[top]?.[left]>0)return true;
+    if(map[top]?.[right]>0)return true;
+    if(map[bottom]?.[left]>0)return true;
+    if(map[bottom]?.[right]>0)return true;
+
+    return false;
+}
+
+function placeBomb(p){
+    let gx=Math.floor(p.x/tile)*tile;
+    let gy=Math.floor(p.y/tile)*tile;
+    bombs.push(new Bomb(gx,gy));
 }
 
 function explode(bomb){
-  let dirs=[[0,0],[1,0],[-1,0],[0,1],[0,-1]];
-  dirs.forEach(d=>{
-    let nx=bomb.x+d[0];
-    let ny=bomb.y+d[1];
-    if(map[ny][nx]!==1){
-      explosions.push({x:nx,y:ny,timer:20});
-      if(map[ny][nx]===2){
-        map[ny][nx]=0;
-      }
-    }
-  });
+    bombs=bombs.filter(b=>b!==bomb);
+
+    const dirs=[[0,0],[1,0],[-1,0],[0,1],[0,-1]];
+
+    dirs.forEach(d=>{
+        let x=bomb.x+d[0]*tile;
+        let y=bomb.y+d[1]*tile;
+
+        explosions.push(new Explosion(x,y));
+
+        let r=y/tile;
+        let c=x/tile;
+
+        if(map[r] && map[r][c]===2)map[r][c]=0;
+
+        damage(x,y);
+    });
 }
 
-function draw(){
-  ctx.clearRect(0,0,canvas.width,canvas.height);
-
-  for(let y=0;y<rows;y++){
-    for(let x=0;x<cols;x++){
-      if(map[y][x]===1){
-        ctx.fillStyle="#555";
-        ctx.fillRect(x*tileSize,y*tileSize,tileSize,tileSize);
-      }
-      if(map[y][x]===2){
-        ctx.fillStyle="#964B00";
-        ctx.fillRect(x*tileSize,y*tileSize,tileSize,tileSize);
-      }
-    }
-  }
-
-  bombs.forEach(b=>{
-    ctx.fillStyle="black";
-    ctx.beginPath();
-    ctx.arc(b.x*tileSize+20,b.y*tileSize+20,10,0,Math.PI*2);
-    ctx.fill();
-  });
-
-  explosions.forEach(e=>{
-    ctx.fillStyle="orange";
-    ctx.fillRect(e.x*tileSize,e.y*tileSize,tileSize,tileSize);
-  });
-
-  if(player.alive){
-    ctx.fillStyle="cyan";
-    ctx.fillRect(player.x*tileSize,player.y*tileSize,tileSize,tileSize);
-  }
-
-  enemies.forEach(en=>{
-    if(en.alive){
-      ctx.fillStyle="red";
-      ctx.fillRect(en.x*tileSize,en.y*tileSize,tileSize,tileSize);
-    }
-  });
-
-  if(!player.alive){
-    ctx.fillStyle="white";
-    ctx.font="40px Arial";
-    ctx.fillText("GAME OVER",120,240);
-  }
+function damage(x,y){
+    [p1,p2].forEach(p=>{
+        if(p.alive &&
+           p.x<x+tile &&
+           p.x+30>x &&
+           p.y<y+tile &&
+           p.y+30>y){
+            p.alive=false;
+        }
+    });
 }
 
-function gameLoop(){
-  update();
-  draw();
-  requestAnimationFrame(gameLoop);
+let p1=new Player(0,0,"cyan",
+    {up:"w",down:"s",left:"a",right:"d",bomb:"f"}
+);
+let p2=new Player(600,600,"red",
+    {up:"ArrowUp",down:"ArrowDown",
+     left:"ArrowLeft",right:"ArrowRight",
+     bomb:"Enter"}
+);
+
+generateMap();
+
+function loop(){
+    ctx.clearRect(0,0,640,640);
+
+    drawMap();
+
+    p1.move();
+    p2.move();
+
+    p1.draw();
+    p2.draw();
+
+    bombs.forEach(b=>{b.update();b.draw();});
+    explosions.forEach(e=>{e.update();e.draw();});
+    explosions=explosions.filter(e=>e.timer>0);
+
+    if(!p1.alive || !p2.alive){
+        ctx.fillStyle="white";
+        ctx.font="40px Arial";
+        ctx.fillText("FIM DE JOGO",170,320);
+    }
+
+    requestAnimationFrame(loop);
 }
 
-gameLoop();
+loop();
 </script>
 </body>
 </html>
