--- a/index.html
+++ b/index.html
@@ -1,199 +1,170 @@
+
 <!DOCTYPE html>
-<html lang="pt">
+<html>
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>Bomberman NFT</title>
+<title>Bomberman Funcional</title>
 <style>
-body{background:#0a0a0a;color:#fff;font-family:Courier New,monospace;margin:0;display:flex;justify-content:center;align-items:center;height:100vh}
-canvas{border:4px solid #ffaa00;background:#1a1a1a}
-button{margin:10px;padding:10px 20px;font-weight:bold}
+body { margin:0; background:#222; display:flex; justify-content:center; align-items:center; height:100vh; }
+canvas { background:#000; }
+#info { position:absolute; top:10px; color:white; font-family:Arial; }
 </style>
 </head>
 <body>
-<canvas id="gameCanvas" width="520" height="520"></canvas>
-<button id="btnBomb">💣 Bomb</button>
+<div id="info">Setas = mover | Espaço = bomba</div>
+<canvas id="game" width="480" height="480"></canvas>
 
 <script>
-const GRID_SIZE = 13;
-const CELL_SIZE = 40;
+const canvas = document.getElementById("game");
+const ctx = canvas.getContext("2d");
 
-let keys = {};
-document.addEventListener('keydown',e=>keys[e.key]=true);
-document.addEventListener('keyup',e=>keys[e.key]=false);
+const tileSize = 40;
+const rows = 12;
+const cols = 12;
 
-class BombermanGame{
-
-constructor(canvasId){
-this.canvas=document.getElementById(canvasId);
-this.ctx=this.canvas.getContext("2d");
-
-this.player={
-x:1,y:1,
-lives:3,
-atk:5,
-def:5,
-spd:2,
-bombPower:2,
-bombCount:1
-};
-
-this.map=[];
-this.bombs=[];
-this.explosions=[];
-this.moveCooldown=0;
-
-this.initMap();
-this.loop();
+let map = [];
+for(let y=0;y<rows;y++){
+  map[y] = [];
+  for(let x=0;x<cols;x++){
+    if(y===0||x===0||y===rows-1||x===cols-1|| (y%2===0 && x%2===0)){
+      map[y][x] = 1; // parede fixa
+    } else if(Math.random() < 0.3 && !(x<3 && y<3)){
+      map[y][x] = 2; // bloco destrutível
+    } else {
+      map[y][x] = 0;
+    }
+  }
 }
 
-initMap(){
-for(let y=0;y<GRID_SIZE;y++){
-let row=[];
-for(let x=0;x<GRID_SIZE;x++){
-if(x===0||y===0||x===GRID_SIZE-1||y===GRID_SIZE-1) row.push(2);
-else if(x%2===0&&y%2===0) row.push(2);
-else row.push(Math.random()<0.4?1:0);
-}
-this.map.push(row);
-}
-this.map[1][1]=0;
-this.map[1][2]=0;
-this.map[2][1]=0;
-}
+let player = {x:1,y:1,alive:true};
+let bombs = [];
+let explosions = [];
+let enemies = [{x:10,y:10,alive:true}];
 
-canMoveTo(x,y){
-if(this.map[y][x]!==0) return false;
-if(this.bombs.some(b=>b.x===x&&b.y===y&&!b.exploded)) return false;
-return true;
-}
-
-movePlayer(dx,dy){
-let nx=this.player.x+dx;
-let ny=this.player.y+dy;
-if(this.canMoveTo(nx,ny)){
-this.player.x=nx;
-this.player.y=ny;
-}
-}
-
-plantBomb(){
-
-if(this.bombs.filter(b=>!b.exploded).length>=this.player.bombCount) return;
-
-if(this.bombs.some(b=>b.x===this.player.x&&b.y===this.player.y&&!b.exploded)) return;
-
-this.bombs.push({
-x:this.player.x,
-y:this.player.y,
-timer:90,
-power:this.player.bombPower,
-exploded:false
-});
-}
-
-updateBombs(){
-
-for(let b of this.bombs){
-b.timer--;
-if(b.timer<=0 && !b.exploded){
-b.exploded=true;
-this.explosions.push({x:b.x,y:b.y,timer:20});
-
-[[1,0],[-1,0],[0,1],[0,-1]].forEach(([dx,dy])=>{
-for(let i=1;i<=b.power;i++){
-let nx=b.x+dx*i;
-let ny=b.y+dy*i;
-if(this.map[ny][nx]===2) break;
-this.explosions.push({x:nx,y:ny,timer:20});
-if(this.map[ny][nx]===1){this.map[ny][nx]=0;break;}
-}
-});
-}
-}
-
-this.bombs=this.bombs.filter(b=>!b.exploded || this.explosions.length>0);
-}
-
-updateExplosions(){
-for(let e of this.explosions) e.timer--;
-this.explosions=this.explosions.filter(e=>e.timer>0);
-}
-
-applyExplosionDamage(){
-
-if(this.explosions.some(e=>e.x===this.player.x&&e.y===this.player.y)){
-let damage=Math.max(1,Math.ceil(4/this.player.def));
-this.player.lives-=damage;
-this.player.x=1;
-this.player.y=1;
-}
-}
-
-draw(){
-
-this.ctx.clearRect(0,0,520,520);
-
-for(let y=0;y<GRID_SIZE;y++){
-for(let x=0;x<GRID_SIZE;x++){
-let cx=x*CELL_SIZE;
-let cy=y*CELL_SIZE;
-if(this.map[y][x]===2){
-this.ctx.fillStyle="#777";
-}else if(this.map[y][x]===1){
-this.ctx.fillStyle="#aa6644";
-}else{
-this.ctx.fillStyle="#222";
-}
-this.ctx.fillRect(cx,cy,CELL_SIZE,CELL_SIZE);
-}
-}
-
-this.bombs.forEach(b=>{
-if(!b.exploded){
-let blink=b.timer<30 && Math.floor(b.timer/5)%2===0;
-this.ctx.fillStyle=blink?"#f00":"#ff0";
-this.ctx.beginPath();
-this.ctx.arc(b.x*CELL_SIZE+20,b.y*CELL_SIZE+20,12,0,Math.PI*2);
-this.ctx.fill();
-}
+document.addEventListener("keydown", e=>{
+  if(!player.alive) return;
+  if(e.key==="ArrowUp") move(0,-1);
+  if(e.key==="ArrowDown") move(0,1);
+  if(e.key==="ArrowLeft") move(-1,0);
+  if(e.key==="ArrowRight") move(1,0);
+  if(e.key===" ") placeBomb();
 });
 
-this.explosions.forEach(e=>{
-this.ctx.fillStyle="#f80";
-this.ctx.fillRect(e.x*CELL_SIZE+4,e.y*CELL_SIZE+4,CELL_SIZE-8,CELL_SIZE-8);
-});
-
-this.ctx.fillStyle="#0f0";
-this.ctx.beginPath();
-this.ctx.arc(this.player.x*CELL_SIZE+20,this.player.y*CELL_SIZE+20,16,0,Math.PI*2);
-this.ctx.fill();
+function move(dx,dy){
+  let nx = player.x+dx;
+  let ny = player.y+dy;
+  if(map[ny][nx]===0){
+    player.x=nx;
+    player.y=ny;
+  }
 }
 
-loop(){
-
-if(this.moveCooldown<=0){
-if(keys["ArrowUp"]) {this.movePlayer(0,-1);this.moveCooldown=Math.max(1,this.player.spd);}
-if(keys["ArrowDown"]) {this.movePlayer(0,1);this.moveCooldown=Math.max(1,this.player.spd);}
-if(keys["ArrowLeft"]) {this.movePlayer(-1,0);this.moveCooldown=Math.max(1,this.player.spd);}
-if(keys["ArrowRight"]) {this.movePlayer(1,0);this.moveCooldown=Math.max(1,this.player.spd);}
-}else this.moveCooldown--;
-
-if(keys[" "]){this.plantBomb();keys[" "]=false;}
-
-this.updateBombs();
-this.updateExplosions();
-this.applyExplosionDamage();
-this.draw();
-
-requestAnimationFrame(()=>this.loop());
+function placeBomb(){
+  if(!bombs.some(b=>b.x===player.x && b.y===player.y)){
+    bombs.push({x:player.x,y:player.y,timer:60});
+  }
 }
 
+function update(){
+  bombs.forEach(b=>b.timer--);
+  bombs.filter(b=>b.timer<=0).forEach(explode);
+  bombs = bombs.filter(b=>b.timer>0);
+
+  explosions.forEach(e=>e.timer--);
+  explosions = explosions.filter(e=>e.timer>0);
+
+  enemies.forEach(en=>{
+    if(!en.alive) return;
+    if(Math.random()<0.02){
+      let dirs=[[1,0],[-1,0],[0,1],[0,-1]];
+      let d = dirs[Math.floor(Math.random()*4)];
+      let nx=en.x+d[0], ny=en.y+d[1];
+      if(map[ny][nx]===0){
+        en.x=nx; en.y=ny;
+      }
+    }
+  });
+
+  explosions.forEach(e=>{
+    if(player.x===e.x && player.y===e.y){
+      player.alive=false;
+    }
+    enemies.forEach(en=>{
+      if(en.x===e.x && en.y===e.y){
+        en.alive=false;
+      }
+    });
+  });
 }
 
-const game=new BombermanGame("gameCanvas");
+function explode(bomb){
+  let dirs=[[0,0],[1,0],[-1,0],[0,1],[0,-1]];
+  dirs.forEach(d=>{
+    let nx=bomb.x+d[0];
+    let ny=bomb.y+d[1];
+    if(map[ny][nx]!==1){
+      explosions.push({x:nx,y:ny,timer:20});
+      if(map[ny][nx]===2){
+        map[ny][nx]=0;
+      }
+    }
+  });
+}
 
-document.getElementById("btnBomb").onclick=()=>game.plantBomb();
+function draw(){
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+
+  for(let y=0;y<rows;y++){
+    for(let x=0;x<cols;x++){
+      if(map[y][x]===1){
+        ctx.fillStyle="#555";
+        ctx.fillRect(x*tileSize,y*tileSize,tileSize,tileSize);
+      }
+      if(map[y][x]===2){
+        ctx.fillStyle="#964B00";
+        ctx.fillRect(x*tileSize,y*tileSize,tileSize,tileSize);
+      }
+    }
+  }
+
+  bombs.forEach(b=>{
+    ctx.fillStyle="black";
+    ctx.beginPath();
+    ctx.arc(b.x*tileSize+20,b.y*tileSize+20,10,0,Math.PI*2);
+    ctx.fill();
+  });
+
+  explosions.forEach(e=>{
+    ctx.fillStyle="orange";
+    ctx.fillRect(e.x*tileSize,e.y*tileSize,tileSize,tileSize);
+  });
+
+  if(player.alive){
+    ctx.fillStyle="cyan";
+    ctx.fillRect(player.x*tileSize,player.y*tileSize,tileSize,tileSize);
+  }
+
+  enemies.forEach(en=>{
+    if(en.alive){
+      ctx.fillStyle="red";
+      ctx.fillRect(en.x*tileSize,en.y*tileSize,tileSize,tileSize);
+    }
+  });
+
+  if(!player.alive){
+    ctx.fillStyle="white";
+    ctx.font="40px Arial";
+    ctx.fillText("GAME OVER",120,240);
+  }
+}
+
+function gameLoop(){
+  update();
+  draw();
+  requestAnimationFrame(gameLoop);
+}
+
+gameLoop();
 </script>
 </body>
 </html>
